<resources>


    <!-- LOGIN ACTIVITY !-->
    <string name="login_email">Log in with email</string>
    <string name="login_google">Log in with Google</string>
    <string name="login_facebook">Log in with Facebook</string>

    <string name="app_name">Musyzian</string>
    <string name="app_description">Find musicians near you</string>

    <!-- LOGIJN ACTIVITY EMAIL !-->
    <string name="email_exp">Introduce Email and Password to log-in or create a new account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="Sing_in">Sign in</string>
    <string name="register_text">Click here to create a new account</string>

    <string name="email_error_empty">The email can\'t be empty</string>
    <string name="email_error_form">Not a valid email</string>
    <string name="password_error_empty">The password can\'t be empty</string>
    <string name="password_error_length">The password must have at least 6 characters</string>
    <string name="error_singin">Incorrect email or password</string>

    <!--register email activity !-->
    <string name="title_register">Introduce email and password to create your new account</string>
    <string name="return_login">Return to the log-in screen</string>
    <string name="register">Register</string>

    <string name="user_registered">User registered correctly</string>
    <string name="user_not_registered">The account couldn\'t be created</string>

    <!-- email verification activity !-->
    <string name="verification_text">A mail has been sent to your email address. Open it and
    click on the link to verify this account.</string>
    <string name="send_email_again">Send email again</string>
    <string name="email_verified">Email verified</string>

    <!-- setup activity !-->
    <string name="set_up_tiutle">Let\'s start</string>
    <string name="set_up_description">Introduce your personal data</string>

    <string name="click_change_image">Click over the image to choose one</string>

    <string name="name">Name</string>
    <string name="birthday">Birthday (DD/MM/YYYY)</string>
    <string name="continue_">Save</string>

    <string name="incomplete_data">You have to fill all the data</string>
    <string name="valid_date">You must write a valid date (DD/MM/YYYY)</string>

    <!-- menu    !-->
    <string name="logout">Log-out</string>
    <string name="title_activity_musical_set_up">MusicalSetUpActivity</string>
    <string name="settings">Settings</string>
    <string name="filter">Filter</string>

    <!-- musical setup !-->
    <string name="musical_setup_title">Tell us something more</string>
    <string name="musical_setup_description">What instruments do you play?</string>

    <string name="musical_setup_choose_instrument">At least, you have to choose one instrument</string>

    <!-- artist setup !-->
    <string name="artist_setup_title">Now choose your favourite artists</string>
    <string name="artist_setup_description">Search for them and select 20 as maximum</string>

    <string name="artist_added">Artist added</string>
    <string name="artist_already_added">Artist already added</string>
    <string name="artist_deleted">Artist deleted</string>
    <string name="no_more_artists">You can\'t add more artists</string>

    <string name="artists_added">Artists added:</string>

    <string name="choose_one_artist">At least you have to choose one artist</string>

    <!-- location description activity !-->
    <string name="location_description_title">The last step</string>
    <string name="location_description_description">Write something about you and set up your location</string>

    <string name="location_description_hint">Write here... (250 characters max.)</string>

    <string name="find_location">Find location</string>

    <string name="fill_description_location">You have to fill all the information</string>

    <!-- settings !-->
    <string name="main_menu">Main Menu</string>
    <string name="chats">Chats</string>
    <string name="upload_audios">Upload audios</string>
    <string name="profile_information">Profile Information</string>
    <string name="instruments_selection">Instrument Selection</string>
    <string name="artist_selection">Artist Selection</string>
    <string name="location_description">Description and Location</string>
    <string name="change_password">Change password</string>
    <string name="delete_account">Delete account</string>

    <string name="account_deleted">Account deleted</string>

    <string name="delete_account_confirmation">Write your password to delete this account</string>
    <string name="delete_account_confirmation2">Are you sure?</string>

    <string name="dialog_ok">Ok</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_signout_confirmation">Are you sure you want to sign-out?</string>

    <string name="user_not_deleted">The account couldn\'t be deleted</string>
    <string name="user_deleted">The account has been deleted</string>

    <string name="password_changed">Password changed</string>
    <string name="password_not_changed">Password not changed</string>

    <!-- user list !-->
    <string name="user_plays">Plays:</string>
    <string name="user_listens">Listens:</string>

    <string name="contact_user">View user</string>

    <string name="years_old">years old</string>

    <string name="chat">Chat</string>

    <string name="distance">Distance</string>

    <!-- upload audios activity -->
    <string name="upload_audio">Upload Audio</string>
    <string name="no_audios_uploaded">No audios uploaded yet</string>


</resources>
