<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single"
        android:id="@+id/chats">

        <item android:id="@+id/nav_chats"
            android:title="@string/chats"/>

    </group>

    <group android:checkableBehavior="single"
    android:id="@+id/settings">

        <item android:id="@+id/nav_profile_information"
            android:title="@string/profile_information"/>

        <item android:id="@+id/nav_instrument_selection"
            android:title="@string/instruments_selection"/>

        <item android:id="@+id/nav_artist_selection"
            android:title="@string/artist_selection"/>

        <item android:id="@+id/nav_location_description"
            android:title="@string/location_description"/>

        <item android:id="@+id/nav_change_password"
            android:title="@string/change_password"/>

        <item android:id="@+id/nav_delete_account"
            android:title="@string/delete_account"/>

    </group>

</menu>