<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="155dp"
        android:layout_height="116dp"
        app:srcCompat="@drawable/musicians_icon" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/app_name"
        android:textAllCaps="false"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="35sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_description"
        android:textSize="20sp"
        android:textStyle="italic"
        />

    <RelativeLayout
        android:layout_width="391dp"
        android:layout_height="20dp">

    </RelativeLayout>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="SIGN-IN"
        android:textAllCaps="false"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="277dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/email_exp"
        android:textAlignment="center"
        android:textColor="@color/common_google_signin_btn_text_light_pressed"
        android:textSize="18sp"
        tools:text="@string/email_exp" />

    <EditText
        android:id="@+id/emailText"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/passwordText"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/singinButton"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/buttonColor"
        android:onClick="createUserOrLogin"
        android:text="@string/Sing_in" />

    <TextView
        android:id="@+id/textRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:onClick="goToRegisterActivity"
        android:text="@string/register_text"
        android:textColor="@color/colorAccent"
        android:textSize="18sp" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="0dp"
        android:progressTint="@color/colorPrimary"
        android:visibility="invisible" />

</LinearLayout>