<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="155dp"
        android:layout_height="116dp"
        app:srcCompat="@drawable/musicians_icon" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/app_name"
        android:textAllCaps="false"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="35sp"
        android:textStyle="bold|italic" />

    <RelativeLayout
        android:layout_width="391dp"
        android:layout_height="97dp">

    </RelativeLayout>

    <Button
        android:id="@+id/emailLoginButton"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/buttonColor"
        android:drawableRight="@android:drawable/sym_action_email"
        android:onClick="goToLoginEmailActivity"
        android:text="@string/login_email" />

    <Button
        android:id="@+id/googleLoginButton"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/buttonColor"
        android:drawableRight="@drawable/google_icon"
        android:text="@string/login_google" />

    <Button
        android:id="@+id/facebookLoginButton"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/buttonColor"
        android:drawableRight="@drawable/facebook_icon"
        android:text="@string/login_facebook" />

</LinearLayout>