<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="155dp"
        android:layout_height="116dp"
        app:srcCompat="@drawable/musicians_icon" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/app_name"
        android:textAllCaps="false"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="35sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_description"
        android:textSize="20sp"
        android:textStyle="italic"
        />

    <RelativeLayout
        android:layout_width="391dp"
        android:layout_height="50dp">

    </RelativeLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="352dp"
        android:layout_height="wrap_content"
        android:text="@string/verification_text"
        android:textAlignment="center"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button"
        android:layout_width="171dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/buttonColor"
        android:onClick="sendEmailAgain"
        android:text="@string/send_email_again"
        android:textColor="@color/common_google_signin_btn_text_dark_default" />

</LinearLayout>