<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:layout_width="476dp"
        android:layout_height="40dp">

    </RelativeLayout>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/musical_setup_title"
        android:textAllCaps="false"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="277dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/musical_setup_description"
        android:textAlignment="center"
        android:textColor="@color/common_google_signin_btn_text_light_pressed"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/nameText"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/common_google_signin_btn_text_light_default"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/birthdayText"
            android:layout_width="232dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/common_google_signin_btn_text_light_default"
            android:clickable="false"
            android:cursorVisible="false"
            android:editable="false"
            android:ems="10"
            android:enabled="false"
            android:hint="@string/birthday"
            android:inputType="textPersonName"
            android:textIsSelectable="false" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="43dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:backgroundTint="@color/buttonColor"
            android:onClick="showDatePickerDialog"
            app:srcCompat="@android:drawable/ic_menu_my_calendar" />
    </LinearLayout>

    <Button
        android:id="@+id/registerButton"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/buttonColor"
        android:onClick="saveData"
        android:text="@string/continue_" />

    <ProgressBar
        android:id="@+id/progressBarRegister"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="0dp"
        android:progressTint="@color/colorPrimary"
        android:visibility="invisible" />

</LinearLayout>