<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:layout_width="440dp"
        android:layout_height="31dp">

    </RelativeLayout>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:text="@string/location_description_title"
        android:textAllCaps="false"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="277dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:text="@string/location_description_description"
        android:textAlignment="center"
        android:textColor="@color/common_google_signin_btn_text_light_pressed"
        android:textSize="17sp" />

    <EditText
        android:id="@+id/textArea_information"
        android:layout_width="279dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:background="@null"
        android:backgroundTint="@color/colorAccent"
        android:gravity="top|left"
        android:hint="@string/location_description_hint"
        android:inputType="textMultiLine"
        android:lines="9"
        android:overScrollMode="always"
        android:scrollbarStyle="insideInset"
        android:scrollbars="vertical"
        android:scrollHorizontally="false"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="16sp"
        android:maxLength="250"/>

    <LinearLayout
        android:layout_width="262dp"
        android:layout_height="94dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/locationText"
            android:layout_width="207dp"
            android:layout_height="wrap_content"
            android:text="@string/find_location"
            android:textAlignment="center"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="19sp"
            tools:text="@string/find_location" />

        <ImageButton
            android:id="@+id/findLocationButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/buttonColor"
            android:tint="@color/common_google_signin_btn_text_dark_default"
            app:srcCompat="@android:drawable/ic_menu_mylocation" />
    </LinearLayout>

    <Button
        android:id="@+id/locationDescriptionButton"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/buttonColor"
        android:text="@string/continue_"
        android:textColor="@color/common_google_signin_btn_text_dark_default" />

    <ProgressBar
        android:id="@+id/progressBarRegister"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="0dp"
        android:progressTint="@color/colorPrimary"
        android:visibility="invisible" />

</LinearLayout>