<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:layout_width="476dp"
        android:layout_height="40dp">

    </RelativeLayout>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/artist_setup_title"
        android:textAllCaps="false"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="277dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/artist_setup_description"
        android:textAlignment="center"
        android:textColor="@color/common_google_signin_btn_text_light_pressed"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="31dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            app:srcCompat="@android:drawable/ic_search_category_default" />

        <EditText
            android:id="@+id/searchText"
            android:layout_width="267dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Search"
            android:inputType="textPersonName" />
    </LinearLayout>

    <ListView
        android:id="@+id/listViewArtists"
        android:layout_width="317dp"
        android:layout_height="291dp"
        android:layout_marginTop="10dp" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/buttonColor"
        android:onClick="uploadChoosenInstrumentsFirebase"
        android:text="@string/continue_" />

    <ProgressBar
        android:id="@+id/progressBarRegister"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="0dp"
        android:progressTint="@color/colorPrimary"
        android:visibility="invisible" />

</LinearLayout>