<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/common_google_signin_btn_text_dark_default"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="15dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="15dp">

                <ImageView
                    android:id="@+id/profileImageList"
                    android:layout_width="89dp"
                    android:layout_height="95dp"
                    android:layout_weight="1"
                    tools:srcCompat="@tools:sample/avatars" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textUsername"
                        android:layout_width="171dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="TextView"
                        android:textAlignment="center"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textAge"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="TextView"
                        android:textAlignment="center"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/textCity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="TextView"
                        android:textAlignment="center"
                        android:textSize="16sp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textPlays"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/user_plays"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textInstruments"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxWidth="150dp"
                        android:text="TextView"
                        android:textSize="16sp" />
                </LinearLayout>

                <FrameLayout
                    android:layout_width="52dp"
                    android:layout_height="match_parent">

                </FrameLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textListens"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/user_listens"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textArtists"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxWidth="150dp"
                        android:text="TextView"
                        android:textSize="16sp" />

                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/contactUserButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/buttonColor"
                android:text="@string/contact_user"
                android:textColor="@color/common_google_signin_btn_text_dark_default"
                android:textSize="14sp" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>